--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_ENV=production
+APP_KEY=base64:rva8KFt0Ro39XoUGU5zEEVdln6/wwx8bWYap7mazbvg=
+APP_DEBUG=false
 APP_URL=http://localhost
 
 APP_LOCALE=en
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=laravel-ssr-db-instance.ch840c0oslr9.ap-south-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=laravel/laravel_ssr
+DB_DATABASE=laravel-ssr-db-instance
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD='moin786#Ruhul786#Mahian'
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
