--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,7 @@ phases:
     commands:
       - echo "Installing system packages..."
       - yum update -y
-      - yum install -y unzip curl git
-
+      - yum install -y git curl zip unzip libpng-dev libonig-dev libxml2-dev libzip-dev pdo_mysql mbstring exif pcntl
       - echo "Installing Composer dependencies..."
       - composer install --no-dev --optimize-autoloader
 
