--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,55 +2,24 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      php: 8.3
-      nodejs: 18
     commands:
-      - echo "Installing system packages..."
-      - apt update -y
-      - apt install -y git curl zip unzip
-      - amazon-linux-extras enable php8.3
-      - apt clean metadata
-      - apt install -y php-mbstring php-pdo php-mysqlnd php-xml php-gd php-mbstring php-json php-bcmath php-cli php-common php-devel php-mysqlnd php-process php-pecl-zip
-      - echo "Installing Composer dependencies..."
-      - composer install --no-dev --optimize-autoloader
-
-      - echo "Copying .env file..."
-      - cp .env.example .env
-
-      - echo "Generating app key..."
-      - php artisan key:generate
-
+      - echo "Updating apt and installing PHP 8.3 with extensions"
+      - apt-get update -y
+      - apt-get install -y software-properties-common
+      - add-apt-repository ppa:ondrej/php -y
+      - apt-get update -y
+      - apt-get install -y php8.3 php8.3-cli php8.3-mbstring php8.3-xml php8.3-mysql php8.3-curl php8.3-bcmath php8.3-zip php8.3-gd php8.3-common php8.3-readline php8.3-intl php8.3-pgsql unzip git curl zip
+      - update-alternatives --set php /usr/bin/php8.3
+      - php -v
   pre_build:
     commands:
-      - echo "Running Laravel optimizations..."
-      - php artisan config:clear
-      - php artisan route:clear
-      - php artisan view:clear
-      - php artisan cache:clear
-
-      - echo "Setting correct permissions..."
-      - chmod -R 775 storage bootstrap/cache
-
+      - echo "Installing Composer"
+      - curl -sS https://getcomposer.org/installer | php
+      - mv composer.phar /usr/local/bin/composer
   build:
     commands:
-      - echo "Running frontend build (if needed)..."
-      - npm install
-      - npm run build || echo "Skipping asset build"
-
-  post_build:
-    commands:
-      - echo "Running Laravel migrations (optional)..."
-      - php artisan migrate --force || echo "Migration skipped or failed"
-
-      - echo "Build complete."
-
+      - echo "Installing dependencies with Composer"
+      - composer install --no-dev --optimize-autoloader
 artifacts:
   files:
     - '**/*'
-    - '!node_modules/**'
-    - '!.git/**'
-    - '!tests/**'
-    - '!storage/logs/**'
-    - '!vendor/**' # Optional: exclude vendor if not using composer install on EC2
-  discard-paths: no
